<resources>
    <string name="app_name">TheMovies</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="already_registered_login_me">Already registered. Login me!</string>
    <string name="email">Email</string>
    <string name="title_activity_registration">Registration</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="movie_s_name">Movie\'s name</string>
    <string name="overview">Overview</string>
    <string name="release_date_en">Release date:</string>
    <string name="score">Score:</string>
    <string name="_9_8">9.8</string>
    <string name="date">2020</string>
    <string name="film_overview">Обзор фильма</string>
    <string name="release_date">Премьера:</string>
    <string name="rating">IMDb:</string>
    <string name="tagline">Tagline</string>
    <string name="genre">Genre</string>
    <string name="country">Country</string>
    <string name="trailer">Видео</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_fav_movies">Добавьте любимые фильмы…</string>
    <string name="top">Лучшее</string>
    <string name="popular">Популярное</string>
    <string name="search">Поиск</string>
    <string name="favorite">Избранное</string>
    <string name="favorite_button">Favorite button</string>
    <string name="share_button">Share button</string>
    <string name="movie_item">Movie item</string>
    <string name="play_video">Play video</string>
    <string name="movie_video">Movie video</string>


</resources>